# fit-cases

./: README.md  main.py  pyproject.toml
.github/workflows/: contract-tests.yml  e2e-tests.yml  integration-tests.yml  lint.yml  security-code.yml  type-check.yml  unit-tests.yml  update-version.yml
fit_cases/: __init__.py  utils.py
fit_cases/controller/: __init__.py  case.py
fit_cases/lang/: __init__.py  en.json  it.json
fit_cases/model/: __init__.py  case.py  db.py
fit_cases/ui/: case.ui
fit_cases/view/: __init__.py  case_form_dialog.py  case_form_manager.py  case_ui.py
tests/: conftest.py
tests/contract/: test_case_info_contract.py
tests/e2e/: test_case_dialog_e2e.py
tests/integration/: test_case_form_dialog.py  test_case_form_manager.py  test_db_and_case_model.py
tests/unit/: test_case_controller.py  test_lang.py  test_main.py  test_utils.py
