[tool.poetry]
name = "fit-cases"
version = "1.0.0"
description = "Modulo di configurazione per il progetto FIT"
authors = ["FIT Project"]
license = "LGPL-3.0-or-later"
packages = [
    { include = "fit_cases" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
PySide6 = "6.9.0"
sqlalchemy = "^2.0.40"
pillow = ">=10.2.0,<11.0.0"
fit-configurations = { git = "https://github.com/fit-project/fit-configurations.git", branch = "chore/update-python-compatibility-3.13" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"