[tool.poetry]
name = "fit-cases"
version = "1.0.0-rc1"
description = "Modulo di configurazione per il progetto FIT"
authors = ["FIT Project"]
license = "LGPL-3.0-or-later"
packages = [
    { include = "fit_cases" }
]
exclude = ["fit_cases/ui/**"]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
PySide6 = "6.9.0"
sqlalchemy = "^2.0.40"
pillow = ">=12.1.1,<13.0.0"
fit-configurations = { git = "https://github.com/fit-project/fit-configurations.git", branch = "main"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
pythonpath = ["."]
markers = [
    "unit: fast isolated tests",
    "contract: cross-module contract tests for public interfaces and integrations",
    "integration: integration tests with real external resources and dependencies",
    "e2e: end-to-end UI workflow tests",
]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = [
    "fit_common",
    "fit_common.*",
    "fit_assets",
    "fit_assets.*",
    "fit_configurations",
    "fit_configurations.*",
    "sqlalchemy",
    "sqlalchemy.*",
]
ignore_missing_imports = true
